[gd_scene load_steps=5 format=3 uid="uid://bcy1uounmn85m"]

[ext_resource type="PackedScene" uid="uid://caiue05en2fg7" path="res://scenes/GUI/main_game/plant_cards/gui_plant_icon.tscn" id="1_aafjx"]
[ext_resource type="Script" uid="uid://bduc3psd7byal" path="res://scenes/GUI/main_game/contracts/gui_contract_plant_icon.gd" id="1_rjbmk"]
[ext_resource type="Texture2D" uid="uid://dxyqfprxbenb6" path="res://resources/sprites/GUI/icons/resources/icon_light.png" id="3_lnmxj"]
[ext_resource type="Texture2D" uid="uid://ck8xmcukmvwwu" path="res://resources/sprites/GUI/icons/resources/icon_water.png" id="4_mawv0"]

[node name="GUIContractPlaintIcon" type="PanelContainer"]
offset_right = 31.0
offset_bottom = 44.0
script = ExtResource("1_rjbmk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="GUIPlantIcon" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_aafjx")]
unique_name_in_owner = true
layout_mode = 2

[node name="X" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "x"

[node name="CountLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "2"

[node name="ResourceContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Light" type="HBoxContainer" parent="VBoxContainer/ResourceContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ResourceContainer/Light"]
custom_minimum_size = Vector2(6, 6)
layout_mode = 2
texture = ExtResource("3_lnmxj")
stretch_mode = 5

[node name="LightLabel" type="Label" parent="VBoxContainer/ResourceContainer/Light"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HUD_mid"

[node name="Water" type="HBoxContainer" parent="VBoxContainer/ResourceContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ResourceContainer/Water"]
layout_mode = 2
texture = ExtResource("4_mawv0")
stretch_mode = 5

[node name="WaterLabel" type="Label" parent="VBoxContainer/ResourceContainer/Water"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HUD_mid"
